--- a/public/index.css
+++ b/public/index.css
@@ -4,6 +4,8 @@
 	--mg: #808080;
 	--dg: #404040;
 	--bg: #000000;
+
+	--fgblue: #a0a0e8;
 }
 body {
 	margin: 0;
@@ -51,28 +53,34 @@ header h3 {
 	font-size: 12pt;
 	font-weight: 400;
 }
-header textarea {
+header input[type="text"] {
 	border: 0;
 	border-radius: 8px;
 	box-shadow: 0 0 0 0 var(--bg);
 	padding: 2px 4px 2px 4px;
+	width: 5ch;
+	height: 24px;
 	background-color: var(--bg);
 	color: var(--fg);
-	resize: none;
 	font-family: "IBM Plex Mono", monospace;
 	font-size: 14pt;
 	transition:
 		box-shadow ease 0.25s,
 		background-color ease 0.25s;
 }
-header textarea:hover {
+header input[type="text"]:hover {
 	background-color: var(--dg);
 	box-shadow: 0 0 0 4px var(--dg);
 }
-header textarea:focus {
+header input[type="text"]:focus {
 	background-color: var(--dg);
 	box-shadow: 0 0 0 4px var(--dg);
 	outline: none;
+}
+header h3 {
+	font-size: 10pt;
+	font-weight: 300;
+	color: var(--mg);
 }
 a.button {
 	text-decoration: none;
@@ -91,4 +99,54 @@ a.button:hover {
 	box-shadow:
 		0 0 0 2px var(--bg),
 		0 0 0 3px var(--fg);
+}
+#posts {
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	flex-direction: row;
+	flex-wrap: wrap;
+	margin: auto;
+	padding: 32px;
+	max-width: 1280px;
+}
+#posts .post {
+	position: relative;
+	width: fit-content;
+	height: 256px;
+	background-color: blue;
+}
+#posts .post img {
+	max-width: 320px;
+	height: 256px;
+	object-fit: cover;
+}
+#posts .post section {
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	padding: 16px;
+	background-color: #00000080;
+	filter: drop-shadow(0 0 2px black);
+	transition: opacity ease 0.25s;
+}
+#posts .post:hover section {
+	opacity: 1;
+}
+#posts .post section h1 {
+	font-weight: 600;
+	font-size: 14pt;
+}
+#posts .post section p {
+	margin-top: 8px;
+	font-weight: 400;
+	font-size: 12pt;
+}
+#posts .post section a {
+	font-weight: 400;
+	font-size: 12pt;
+	color: var(--fgblue);
 }
