--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,21 +1,3 @@
-:root {
-	--fg: #e8e8e8;
-	--lg: #c0c0c0;
-	--mg: #808080;
-	--dg: #404040;
-	--bg: #000000;
-
-	--fgblue: #a0a0e8;
-}
-body {
-	margin: 0;
-	background-color: var(--bg);
-	color: var(--fg);
-	font-family: "Inter", sans-serif;
-}
-h1, h2, h3, p {
-	margin: 0;
-}
 header {
 	display: flex;
 	justify-content: space-between;
@@ -23,9 +5,10 @@ header {
 	flex-direction: row;
 	flex-wrap: nowrap;
 	margin: auto;
+	padding:
+		16px
+		calc(max(8px, (100vw - 1280px + 16px) / 2));
 	border-bottom: 1px solid var(--dg);
-	padding: 16px;
-	max-width: calc(1280px - 32px);
 }
 header section {
 	display: flex;
@@ -50,8 +33,9 @@ header h2 {
 	font-weight: 500;
 }
 header h3 {
-	font-size: 12pt;
-	font-weight: 400;
+	font-size: 10pt;
+	font-weight: 300;
+	color: var(--mg);
 }
 header input[type="text"] {
 	border: 0;
@@ -76,40 +60,4 @@ header input[type="text"]:focus {
 	background-color: var(--dg);
 	box-shadow: 0 0 0 4px var(--dg);
 	outline: none;
-}
-header h3 {
-	font-size: 10pt;
-	font-weight: 300;
-	color: var(--mg);
-}
-button, a.button {
-	text-decoration: none;
-	border: 0;
-	border-radius: 8px;
-	box-shadow:
-		0 0 0 0 var(--bg),
-		0 0 0 1px var(--fg);
-	transition: box-shadow ease 0.25s;
-	padding: 8px 16px 8px 16px;
-	background-color: var(--bg);
-	color: var(--fg);
-	font-size: 12pt;
-	font-weight: 700;
-}
-button.icon, a.button.icon {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 50%;
-	padding: 0;
-	width: 32px;
-	height: 32px;
-	font-size: 16pt;
-	font-weight: 400;
-}
-button:hover, a.button:hover {
-	box-shadow:
-		0 0 0 2px var(--bg),
-		0 0 0 3px var(--fg);
-	cursor: pointer;
 }
