--- a/public/styles/post.css
+++ b/public/styles/post.css
@@ -18,6 +18,7 @@
 	background-color: var(--mg);
 }
 #posts .post img {
+	min-width: 224px;
 	max-width: 320px;
 	height: 256px;
 	object-fit: cover;
@@ -50,4 +51,12 @@
 	font-weight: 400;
 	font-size: 12pt;
 	color: var(--fgblue);
+}
+#post-desc {
+	width: 512px;
+}
+#post-desc img {
+	display: block;
+	margin: auto;
+	max-width: 320px;
 }
