--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -1,11 +1,13 @@
 :root {
-	--fg: #e8e8e8;
-	--lg: #c0c0c0;
+	--bg: #e8e8e8;
+	--lt: #d0d0d0;
+	--sh: #a0a0a0;
 	--mg: #808080;
-	--dg: #404040;
-	--bg: #000000;
+	--hl: #404040;
+	--dk: #202020;
+	--fg: #181818;
 
-	--fgblue: #a0a0e8;
+	--blue: #a0a0e8;
 }
 body {
 	margin: 0;
@@ -16,66 +18,86 @@ body {
 h1, h2, h3, p {
 	margin: 0;
 }
-button, a.button {
-	text-decoration: none;
-	border: 0;
-	border-radius: 8px;
-	box-shadow:
-		0 0 0 0 var(--bg),
-		0 0 0 1px var(--fg);
-	transition: box-shadow ease 0.25s;
-	padding: 8px 16px 8px 16px;
-	background-color: var(--bg);
+a {
+	color: var(--blue);
+}
+.btn, .btn-icon {
+	height: 16px;
+	line-height: 16px;
+	border: none;
+	border-radius: 20px;
+	box-shadow: 0 0 0 1px var(--lt);
+	padding: 8px 16px;
+	background-color: var(--lt);
 	color: var(--fg);
 	font-size: 12pt;
-	font-weight: 700;
+	text-decoration: none;
+	transition:
+		box-shadow ease 0.25s,
+		background-color ease 0.25s;
 }
-button.icon, a.button.icon {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 50%;
-	padding: 0;
-	width: 32px;
-	height: 32px;
-	font-size: 16pt;
-	font-weight: 400;
+.btn-icon {
+	padding: 8px;
+	width: 16px;
+	height: 16px;
+	text-align: center;
 }
-button:hover, a.button:hover {
-	box-shadow:
-		0 0 0 2px var(--bg),
-		0 0 0 3px var(--fg);
+.btn:hover, .btn-icon:hover {
+	box-shadow: 0 0 0 4px var(--lt);
+	background-color: var(--lt);
 	cursor: pointer;
 }
-.cols {
+header {
 	display: flex;
-	justify-content: center;
-	align-items: flex-start;
 	flex-direction: row;
 	flex-wrap: nowrap;
-	margin: 16px;
+	justify-content: space-between;
+	align-content: center;
+	align-items: center;
+	padding: 16px calc(max(16px, (100vw - 800px) / 2));
+	width: calc(min(100vw - 32px, 800px - 32px));
 }
-.col {
+header h1, h2, header input {
+	color: var(--fg);
+	font-family: "IBM Plex Mono", monospace;
+	font-size: 14pt;
+	font-weight: 400;
+}
+header h1 {
+	font-weight: 700;
+}
+header h3, a {
+	margin-left: 8px;
+	color: var(--sh);
+	font-weight: 400;
+	font-size: 12pt;
+}
+header input {
 	display: block;
-	flex-grow: 1;
+	border-radius: 4px;
+	border: none;
+	border-bottom: 2px solid var(--bg);
+	width: 5ch;
+	background-color: var(--bg);
+	font-weight: 400;
+	transition:
+		border-color ease 0.25s,
+		background-color ease 0.25s;
 }
-section.align-right {
-	display: block;
-	margin-left: auto;
-	width: fit-content;
-	height: fit-content;
+header input:hover {
+	border-color: var(--lt);
+	cursor: pointer;
 }
-@media only screen and (max-width: 800px) {
-	.cols {
-		display: flex;
-		justify-content: flex-start;
-		align-items: center;
-		flex-direction: column;
-		flex-wrap: nowrap;
-	}
-	.col {
-		flex-grow: 0;
-		width: fit-content;
-		height: fit-content;
-	}
+header input:focus {
+	border-color: var(--mg);
+	background-color: var(--lt);
+	outline: none;
+}
+header .group {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
 }
