--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -1,4 +1,5 @@
 :root {
+	--in: #f0f0f0;
 	--bg: #e8e8e8;
 	--lt: #d0d0d0;
 	--sh: #a0a0a0;
@@ -26,7 +27,7 @@ a {
 	line-height: 16px;
 	border: none;
 	border-radius: 20px;
-	box-shadow: 0 0 0 1px var(--lt);
+	box-shadow: 0 0 0 0 var(--lt);
 	padding: 8px 16px;
 	background-color: var(--lt);
 	color: var(--fg);
@@ -48,14 +49,24 @@ a {
 	cursor: pointer;
 }
 header {
+	position: static;
+	z-index: 99;
 	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
 	justify-content: space-between;
 	align-content: center;
 	align-items: center;
-	padding: 16px calc(max(16px, (100vw - 800px) / 2));
+	border: none;
+	border-bottom: 1px solid var(--bg);
+	padding: 16px calc(max(16px, (100vw - 800px) / 2 + 16px));
 	width: calc(min(100vw - 32px, 800px - 32px));
+	height: 32px;
+	background-color: var(--bg);
+	transition: border-color ease 0.25s;
+}
+header.sticky {
+	position: sticky;
+	top: 0;
+	border-bottom: 1px solid var(--mg);
 }
 header h1, h2, header input {
 	color: var(--fg);
@@ -94,6 +105,7 @@ header input:focus {
 	outline: none;
 }
 header .group {
+	position: relative;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
