--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,29 +1,79 @@
-#posts {
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	flex-direction: row;
-	flex-wrap: wrap;
-	margin: auto;
-	padding: 32px;
-	padding-top: 8px;
-	max-width: 1280px;
-}
-#posts .post {
+#root {
 	position: relative;
+	width: 100vw;
+	height: calc(100vh - 64px);
+}
+.qrl, .qrc, .qrr, .qrg {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: fit-content;
+	height: fit-content;
+	transition:
+		z-index ease 0.5s,
+		transform ease 0.5s;
+}
+.qrl {
+	z-index: 10;
+	transform: translate(-100%, -50%) scale(0.75);
+}
+.qrc {
+	z-index: 20;
+	transform: translate(-50%, -50%) scale(1);
+}
+.qrr {
+	z-index: 10;
+	transform: translate(0, -50%) scale(0.75);
+}
+.qrg {
+	z-index: 0;
+	transform: translate(-50%, -50%) scale(0.5);
+}
+#btn-prev, #btn-next {
+	z-index: 99;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	border-radius: 50%;
+	width: 48px;
+	height: 48px;
+	line-height: 48px;
+	background-color: blue;
+	color: white;
+	text-align: center;
+	font-size: 16pt;
+	font-weight: 900;
+}
+#btn-prev {
+	left: calc(max((100vw - 640px) / 2, 32px));
+}
+#btn-next {
+	right: calc(max((100vw - 640px) / 2, 32px));
+}
+#btn-prev:hover, #btn-next:hover {
+	cursor: pointer;
+}
+#btn-prev::before {
+	content: "&larr;";
+}
+#btn-next::before {
+	content: "&rarr;";
+}
+.post {
 	margin: 8px;
 	border: 1px solid var(--sh);
 	width: fit-content;
-	height: 256px;
+	height: fit-content;
 	background-color: var(--mg);
 }
-#posts .post img {
-	min-width: 224px;
-	max-width: 320px;
-	height: 256px;
+.post img {
+	min-width: 368px;
+	max-width: 512px;
+	min-height: 368px;
+	max-height: 512px;
 	object-fit: cover;
 }
-#posts .post section {
+.post section {
 	opacity: 0;
 	position: absolute;
 	top: 0;
@@ -36,19 +86,19 @@
 	filter: drop-shadow(0 0 2px black);
 	transition: opacity ease 0.25s;
 }
-#posts .post:hover section {
+.post:hover section {
 	opacity: 1;
 }
-#posts .post section h1 {
+.post section h1 {
 	font-weight: 600;
 	font-size: 14pt;
 }
-#posts .post section p {
+.post section p {
 	margin-top: 8px;
 	font-weight: 400;
 	font-size: 12pt;
 }
-#posts .post section a {
+.post section a {
 	font-weight: 400;
 	font-size: 12pt;
 	color: var(--blue);
