--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -40,9 +40,10 @@ a {
 		background-color ease 0.25s;
 }
 .btn-icon {
-	padding: 8px;
-	width: 16px;
-	height: 16px;
+	padding: 0;
+	width: 32px;
+	height: 32px;
+	line-height: 32px;
 	text-align: center;
 }
 .btn:hover, .btn-icon:hover, .btn:focus, .btn-icon:focus {
@@ -60,6 +61,7 @@ header {
 	border: none;
 	border-bottom: 1px solid var(--bg);
 	padding: 16px calc(max(16px, (100vw - 800px) / 2 + 16px));
+	padding-bottom: 0;
 	width: calc(min(100vw - 32px, 800px - 32px));
 	height: 32px;
 	background-color: var(--bg);
