--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -117,3 +117,39 @@ header .group {
 	align-content: center;
 	align-items: center;
 }
+.menu {
+	z-index: 99;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	border: 1px solid var(--dg);
+	border-radius: 16px;
+	outline: 1px solid var(--hl);
+	padding: 32px;
+	background-color: var(--bg);
+}
+.menu #close {
+	position: absolute;
+	top: 8px;
+	right: 8px;
+}
+.menu #close:hover {
+	cursor: pointer;
+}
+.menu h1 {
+	font-weight: 600;
+	font-size: 14pt;
+}
+.menu h2 {
+	font-weight: 400;
+	font-size: 12pt;
+}
+.menu h3 {
+	font-weight: 500;
+	font-size: 10pt;
+}
+.menu p {
+	font-weight: 400;
+	font-size: 10pt;
+}
