--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -21,63 +21,30 @@
 	width: fit-content;
 	height: calc(100vh - 48px);
 }
-/*
-#btn-prev, #btn-next {
-	z-index: 98;
-	position: fixed;
-	top: 50%;
-	outline: 1px solid var(--hl);
-	background-color: var(--hl);
-	box-shadow: 0 0 4px 2px var(--bg);
-	transition:
-		outline ease 0.25s,
-		background-color ease 0.25s,
-		box-shadow ease 0.25s;
-}
-#btn-prev:hover, #btn-next:hover {
-	outline: 2px solid var(--fg);
-	background-color: var(--sf);
-	box-shadow: 0 0 8px 4px var(--bg);
-}
-#btn-prev {
-	left: calc(max(50% - 256px, 32px));
-	transform: translate(-50%, -50%);
-}
-#btn-next {
-	right: calc(max(50% - 256px, 32px));
-	transform: translate(50%, -50%);
-}
-.padding-post {
-	position: absolute;
-	top: 50%;
-	width: calc(max(50vw - 256px, 128px));
-	height: 32px;
-	background-color: transparent;
-}
-*/
 .post {
-	/*
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: flex-start;
-	align-content: flex-start;
-	align-items: flex-start;
-	*/
 	z-index: 96;
 	position: relative;
 	margin: var(--postmar);
 	outline: 0px solid var(--bg);
+	outline-radius: 16px;
 	border-radius: 16px;
 	padding: var(--postpad);
+	padding-bottom: 32px;
 	width: var(--postsz);
 	height: fit-content;
 	background-color: var(--bg);
 	color: var(--sf);
-	transform: /* translate(-50%, -50%) */ scale(1);
+	transform: scale(1);
 	transition:
 		outline ease 0.25s,
+		background-color ease 0.25s,
 		transform ease 0.25s;
+}
+/* this will only be used when a post isn't selected */
+div[class="post"]:hover {
+	outline: 1px solid var(--hg);
+	background-color: var(--lg);
+	cursor: pointer;
 }
 .post img {
 	display: block;
@@ -89,134 +56,49 @@
 	background-color: var(--bg);
 }
 .post p {
-	display: block;
-	margin: 8px 0;
-	margin-bottom: 16px;
-	line-height: 20px;
-	font-size: 10pt;
+	line-height: 16px;
+	font-size: 8pt;
 }
 .post h3 {
-	position: absolute;
-	bottom: 8px;
-	right: 8px;
+	margin-top: 8px;
+	margin-bottom: 2px;
+	font-size: 6pt;
+	font-weight: 400;
 	color: var(--hl);
+}
+.post a {
+	visibility: hidden;
+	position: absolute;
+	bottom: 12px;
+	right: 12px;
+	border: 0;
+	border-radius: 10px;
+	padding: 5px 8px;
+	background-color: var(--hg);
+	color: var(--primary);
 	font-size: 8pt;
 	font-weight: 400;
+	line-height: 10px;
+	transition:
+		background-color ease 0.25s,
+		color ease 0.25s;
+}
+.post a:hover {
+	background-color: var(--primary);
+	color: var(--fg);
+	cursor: pointer;
 }
 .post.select {
 	z-index: 97;
 	outline: 2px solid var(--hl);
-	color: var(--fg);
-	transform: /* translate(-50%, -50%) */ scale(1.5);
+	transform: scale(1.5);
 }
-.post.select h3 {
+.post.select, div[class="post"]:hover p {
+	color: var(--fg);
+}
+.post.select h3, div[class="post"]:hover h3 {
 	color: var(--sf);
 }
-#comment-box {
-	z-index: 98;
-	position: fixed;
-	bottom: 0;
-	left: 50%;
-	border-radius: 16px 16px 0 0;
-	width: 100vw;
-	max-width: 368px;
-	height: 32px;
-	line-height: 32px;
-	background-color: var(--hg);
-	text-align: center;
-	transform: translateX(-50%);
-	transition:
-		border-radius ease 0.25s,
-		height ease 0.25s,
-		line-height ease 0.25s,
-		background-color ease 0.25s;
-}
-#comment-box #up-prompt {
-	display: block;
-	color: var(--fg);
-	font-size: 12pt;
-	font-weight: 400;
-	text-decoration: none;
-}
-#comment-box .comment-body {
-	display: none;
-}
-#comment-box:hover {
-	border-radius: 24px 24px 0 0;
-	height: 48px;
-	line-height: 48px;
-	background-color: var(--hl);
-	cursor: pointer;
-}
-#comment-box.active {
-	border-radius: 0;
-	outline: 1px solid var(--hl);
-	height: calc(100vh - 64px);
-	background-color: var(--bg);
-}
-#comment-box.active:hover {
-	cursor: unset;
-}
-#comment-box.active #up-prompt {
-	display: none;
-}
-#comment-box.active #down-prompt {
-	display: block;
-	width: 100%;
-	height: 32px;
-	line-height: 32px;
-	background-color: var(--hg);
-	color: var(--fg);
-	text-decoration: none;
-	text-align: center;
-	font-size: 12pt;
-	font-weight: 400;
-	transition: background-color ease 0.25s;
-}
-#comment-box.active #down-prompt:hover {
-	background-color: var(--hl);
-	cursor: pointer;
-}
-#comment-box.active .comment-body {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	height: 100%;
-	line-height: 24px;
-	position: relative;
-	text-align: left;
-}
-#comment-box.active #messages {
-	position: absolute;
-	overflow: scroll;
-	top: 32px;
-	left: 0;
-	bottom: 32px;
-	right: 0;
-}
-#comment-box.active #messages p {
-	margin: 4px 0;
-	line-height: 24px;
-	font-size: 12pt;
-}
-#comment-box.active #messages span.info {
-	color: var(--sf);
-}
-#comment-box.active #ws-message {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	border: 0;
-	outline: 1px solid var(--hl);
-	padding: 4px 8px;
-	width: calc(100% - 16px);
-	height: 24px;
-	line-height: 24px;
-	background-color: var(--hg);
-	color: var(--fg);
-	font-size: 12pt;
-	transition: outline ease 0.25s;
-}
-#comment-box.active #ws-message:focus {
-	outline: 2px solid var(--sf);
+.post.select a {
+	visibility: visible;
 }
